--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_core: ^4.4.0
   cloud_firestore: ^6.1.2
   flutter_quill: ^11.5.0
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
